# Power-Grid-Optimization

./: .gitignore  Read me.md  pyproject.toml  readme.md
powergrid_torch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
powergrid_torch/JupyterNotebooks/: DataExploration.ipynb  Model_Comparison.ipynb
powergrid_torch/data/14Bus/: PF_Dataset_1.xlsx  PF_Dataset_10.xlsx  PF_Dataset_2.xlsx  PF_Dataset_3.xlsx  PF_Dataset_4.xlsx  PF_Dataset_5.xlsx  PF_Dataset_6.xlsx  PF_Dataset_7.xlsx  PF_Dataset_8.xlsx  PF_Dataset_9.xlsx
powergrid_torch/data/30Bus/: PF_Dataset_1.xlsx  PF_Dataset_10.xlsx  PF_Dataset_2.xlsx  PF_Dataset_3.xlsx  PF_Dataset_4.xlsx  PF_Dataset_5.xlsx  PF_Dataset_6.xlsx  PF_Dataset_7.xlsx  PF_Dataset_8.xlsx  PF_Dataset_9.xlsx
powergrid_torch/models/: baseClass.py  gnn.py  transformer.py
powergrid_torch/training/: train.py
powergrid_torch/utils/: extras.py  pre_processing.py
